# mcp_meet_agentiq

./: .env.sample  .gitignore  README.md  config.json  pyproject.toml  requirements.txt
app/: app.py  streamlit_app.py
app/config/: __init__.py  loader.py
app/graph/: __init__.py  builder.py  nodes.py  state.py
app/tools/: __init__.py  llm_client.py  mcp_manager.py
app/ui/: __init__.py  chainlit_handlers.py  streamlit_handlers.py
app/utils/: __init__.py  formatting.py  parsing.py  prompts.py
mcpservers/: agentiqclient.py  ai_thinking.py  bravesearch.py  dailysum.py  filesearch.py  google.py  googlenews.py  googles.py  news.py  obsidian.py  recent_files.py  weather.py  wiki.py
mcpservers/arxiv-mcp-server/: Dockerfile  pyproject.toml  smithery.yaml
mcpservers/arxiv-mcp-server/src/arxiv_mcp_server/: __main__.py  config.py  server.py  test.ipynb
mcpservers/arxiv-mcp-server/src/arxiv_mcp_server/prompts/: __init__.py  handlers.py  prompt_manager.py  prompts.py
mcpservers/arxiv-mcp-server/src/arxiv_mcp_server/resources/: papers.py
mcpservers/arxiv-mcp-server/src/arxiv_mcp_server/tools/: __init__.py  download.py  list_papers.py  read_paper.py  search.py
mcpservers/arxiv-mcp-server/tests/: conftest.py
mcpservers/arxiv-mcp-server/tests/prompts/: conftest.py  test_prompt_integration.py  test_prompts.py
mcpservers/arxiv-mcp-server/tests/tools/: test_download.py  test_search.py
prompts/: prompt_p.txt
